@@ -1,3 +1,8 @@
+2016-12-05  Dirk Eddelbuettel  <edd@debian.org>
+
+	* src/anytime.cpp (format): Condition only on Rcpp version
+	* tests/utilities.R: Call anytime:::format() 
+
 2016-12-04  Dirk Eddelbuettel  <edd@debian.org>
 
 	* DESCRIPTION (Version, Date): Roll format and date
